--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,15 +10,15 @@
       <%= form_with model:@post, local:true do |f| %>
         <div class="form-group">
           <%= f.label "#{t'activerecord.attributes.post.title'}" %>
-          <%= f.text_field :title, class: 'form-control' %>
+          <%= f.text_field :title, class: 'form-control', placeholder: "#{t'posts.titleplace'}" %>
         </div>
         <div class="form-group">
           <%= f.label "#{t'activerecord.attributes.post.genre'}" %>
-          <%= f.collection_select :genre_id, @genres, :id, :name, {prompt: '-- 選択してください --'}, class: "custom-select" %>
+          <%= f.collection_select :genre_id, @genres, :id, :name, {prompt: "#{t'posts.genreplace'}"}, class: "custom-select" %>
         </div>
         <div class="form-group">
-          <%= f.label "#{t'activerecord.attributes.post.body'}" %>
-          <%= f.text_area :body, class: 'form-control' %>
+          <%= f.label "#{t'activerecord.attributes.post.body'}" %><span><%= t'posts.mdnotation' %></span>
+          <%= f.text_area :body, class: 'form-control', placeholder: "#{t'posts.bodyplace'}" %>
         </div>
         <div class="form-group">
           <%= f.submit "#{t'posts.submit'}", class: 'btn btn-success' %>
