--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,7 @@
 <div class="col-12 mt-3">
   <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= t'posts.post' %> / <% if @post.title.length >= 5 %><%= @post.title.slice(0..12).insert(-1, "…") %><% else %><%= @post.title %><% end %></h4>
 </div>
-<div class="col-12 col-lg-8 mx-auto">
+<div class="col-12 mb-3 col-lg-8 mx-auto">
   <div class="card mt-3">
     <div class="card-body">
       <div class="d-flex justify-content-center">
@@ -27,6 +27,38 @@
           </p>
         </div>
       <% end %>
+    </div>
+  </div>
+</div>
+<div class="col-12 mb-3 col-lg-8 mx-auto">
+  <div class="card h-100">
+    <div class="card-body d-flex">
+      <div class="col-3">
+        <div class="row justify-content-center">
+          <div class="col-12"><%= showconimg %></div>
+        </div>
+      </div>
+      <div class="col-9">
+        <div class="d-flex justify-content-between">
+          <p class="card-text"><%= t'user.name' %></p>
+          <p class="card-text"><%= @user.name %></p>
+        </div>
+        <div class="d-flex justify-content-between">
+          <p class="card-text"><%= t'user.cs' %></p>
+          <p class="card-text"><%= @user.contributions %></p>
+        </div>
+        <div class="d-flex justify-content-between">
+          <p class="card-text"><%= t'relation.follows' %></p>
+          <p class="card-text"><%= link_to "#{@user.follower.count}", user_follows_path(@user.id) %></p>
+        </div>
+        <div class="d-flex justify-content-between">
+          <p class="card-text"><%= t'relation.followers' %></p>
+          <p class="card-text"><%= link_to "#{@user.followed.count}", user_followers_path(@user.id) %></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 mb-3">
+      <%= link_to "#{t'relation.vg'}", "#{@user.github_url}", class: "btn btn-dark w-100" %>
     </div>
   </div>
 </div>
