--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,7 +10,7 @@
       <div class="d-flex justify-content-center mb-3">
         <p class="card-text"><%= @post.genre.name %></p>
       </div>
-      <div class="col-11 mx-auto mb-3">
+      <div class="col-11 mx-auto mb-3 markdown">
         <%= markdown(@post.body) %>
       </div>
       <div class="col-11 mx-auto mb-3" id="favs_buttons_<%= @post.id %>">
