--- a/app/views/relationships/_relationbtn.html.erb
+++ b/app/views/relationships/_relationbtn.html.erb
@@ -1,6 +1,6 @@
 <td><%= link_to "#{user.name}", user_path(user) %></td>
-<td><%= link_to "#{user.follower.count}", user_follows_path(user) %></td>
-<td><%= link_to "#{user.followed.count}", user_followers_path(user) %></td>
+<td><%= link_to "#{user.follower.count}", user_follows_path(user), class: "followcount" %></td>
+<td><%= link_to "#{user.followed.count}", user_followers_path(user), class: "followercount" %></td>
 <td class="p-1">
   <% if user_signed_in? %>
     <% unless user == current_user %>
