--- a/app/views/favorites/_fav.html.erb
+++ b/app/views/favorites/_fav.html.erb
@@ -1,10 +1,10 @@
 <% if user_signed_in? %>
 <% if post.favorited_by?(current_user) %>
-  <%= link_to post_favorites_path(post), :style=>"color:red;", method: :delete, remote: true do %>
+  <%= link_to post_favorites_path(post), :style=>"color:red;", class: "fav", method: :delete, remote: true do %>
     <i class='far fa-thumbs-up'></i><%= post.favorites.count.to_s %>
   <% end %>
 <% else %>
-  <%= link_to post_favorites_path(post), :style=>"color:blue;", method: :post, remote: true do %>
+  <%= link_to post_favorites_path(post), :style=>"color:blue;", class: "fav", method: :post, remote: true do %>
     <i class='far fa-thumbs-up'></i><%= post.favorites.count.to_s %>
   <% end %>
 <% end %>
