--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,7 +6,7 @@
     <div class="card-body">
       <div class="row justify-content-center">
         <div class="col-12"><h4 class="card-title text-center"><%= t'user.profile' %></h4></div>
-        <div class="col-12"><%= showconimg %></div>
+        <div class="d-flex justify-content-center col-12"><%= showconimg %></div>
       </div>
       <div class="d-flex justify-content-between">
         <h4 class="card-title"><%= t'user.name' %></h4>
