--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,10 @@
       </span>
       <% if @user == current_user %>
         <div class="d-flex justify-content-between my-1">
-          <%= link_to "#{t'user.uc'}", edit_user_path(@user.id), class: "btn btn-outline-dark w-100" %>
+          <%= link_to "#{t'user.uc'}", edit_user_path(@user.id), class: "btn btn-outline-dark col-12" %>
+        </div>
+        <div class="d-flex justify-content-between my-1">
+          <small class="col-12"><%= t'user.uca' %></small>
         </div>
         <div class="d-flex justify-content-between my-1">
           <%= link_to "#{t'user.np'}", new_post_path, class: "btn btn-outline-dark w-100" %>
