--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -23,7 +23,7 @@
         <% end %>
       </div>
     </div>
-    <%= paginate @posts %>
+    <%= paginate @search_posts %>
   </div>
 </div>
 <% unless user_signed_in? %>
