--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,7 +44,7 @@
           <% @posts.each do |post| %>
             <div class="list-group-item list-group-item-action">
               <div class="d-flex justify-content-between">
-                <div><%= link_to post_path(post), class: "post-title text-dark font-weight-bold" do %><% if post.title.length >= 5 %><%= post.title.slice(0..12).insert(-1, "…") %><% else %><%= post.title %><% end %><% end %></div>
+                <div><%= link_to post_path(post), class: "post-title text-dark font-weight-bold" do %><% if sum_bytesize_for(post.title.slice(0..20)) <= 29 %><%= post.title.truncate(30) %><% elsif sum_bytesize_for(post.title.slice(0..20)) >= 30 %><%= post.title.truncate(19) %><% end %><% end %></div>
                 <small class="text-muted"><%= " (#{time_ago_in_words(post.created_at)}#{t'notice.ago'})" %></small>
               </div>
               <div class="d-flex justify-content-between">
